# pdhub

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HOW_TO_USE_SCANNER.md  ISSUES_SUMMARY.md  LICENSE  PROJECT_REVIEW.md  QUICK_ACTIONS.md  README.md  README_REVIEW.md  SECURITY.md  docker-compose.yml  environment.yaml  pyproject.toml
.github/workflows/: ci.yml  push-tracking.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-git-and-code-health/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-mutagenesis-workflow-integrity/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-performance-and-reliability/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-test-coverage/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-reporting/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-new-agent-workflows/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-RESEARCH.md
config/: default.yaml
scripts/: check_health.py  run_esm3.py  run_immunebuilder.py  setup_environment.sh
src/protein_design_hub/: __init__.py  __main__.py  app.py
tests/: test_agent_pipeline_integrity.py  test_cli_commands.py  test_energy_metrics.py  test_llm_config.py  test_mutagenesis_workflow.py  test_mutation_scanner_ost.py  test_optional_integrations.py  test_sequence_metrics.py
(+155 files in other folders)
